@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-10T08:10:00Z",
-  "count_outdated" : 1590,
-  "uniques_outdated" : 89,
+  "timestamp" : "2022-06-11T00:39:32Z",
+  "count_outdated" : 1591,
+  "uniques_outdated" : 90,
   "count" : 1644,
   "uniques" : 101,
   "views" : [
-    {
-      "timestamp": "2022-05-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-28T00:00:00Z",
       "count": 1,
