@@ -1,12 +1,7 @@
 {
-  "count": 54,
+  "count": 53,
   "uniques": 3,
   "views": [
-    {
-      "timestamp": "2022-05-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-28T00:00:00Z",
       "count": 1,
